# canopy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  prettier.config.cjs  renovate.json  turbo.json
.agents/plans/: feature-api-implementation.md  scaffold_canopy_ui.md
.opencode/command/: create-plan.md
documentation/: canopy-backend-architecture-brainstorm.md  canopy-product-overview.md  cloudflare-opencode.md  how-to-document.md  product-overview-tauri.md  product-overview.md  server.md  workspace-members.md
documentation/gpui/: gpui-component.md  quick-reference.md  testing-strategy.md  testing.md
documentation/reports/: gpu-test-recursion-fix.md
plans/: workspace-members.md
src/: lib.rs  main.rs  sidebar.rs
tests/: root_view_tests.rs  sidebar_tests.rs  window_tests.rs
