[package]
name = "canopy"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"

# Force core-text 21.0.0 which uses core-graphics 0.24 (matches zed-font-kit)
# This resolves a version conflict between core-graphics 0.24 and 0.25
core-text = "=21.0.0"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support", "runtime_shaders"] }

# GPUI Testing Notes:
# 1. Tests MUST be async: async fn test_foo(cx: &mut TestAppContext)
# 2. Tests MUST be in tests/*.rs files (not src/main.rs or src/lib.rs)
#    - Bug in gpui-macros 0.2.2 causes SIGBUS when #[gpui::test] is in
#      the same file as Render implementations
# 3. Use cx.add_window() to create test windows
# 4. Use cx.run_until_parked() to process pending tasks
